# SpeakerRecognizer

./: .gitignore  README.md  build.gradle  docker-compose.yml
SpeakerRecognizer/: .gitignore  CMakeLists.txt
SpeakerRecognizer/FeatureExtractor/: CMakeLists.txt
SpeakerRecognizer/FeatureExtractor/include/: FeatureExtractor.h  MfccExtractor.h  SoundFile.h  inverse_mfcc.h  kaldi_io.h  mfcc.h  window.inl
SpeakerRecognizer/FeatureExtractor/src/: MfccExtractor.cpp  SoundFile.cpp  inverse_mfcc.cpp  kaldi_io.cpp  mfcc.cpp
SpeakerRecognizer/Lib-linux/armadillo/: libarmadillo.so.7
SpeakerRecognizer/Lib-linux/armadillo/include/armadillo_bits/: Mat_bones.hpp  Mat_meat.hpp
SpeakerRecognizer/Lib-linux/libmpg123-1/: libmpg123.la  libmpg123.so.0.42.3
SpeakerRecognizer/Lib-linux/libsndfile/: libsndfile.so.1.0.27
SpeakerRecognizer/Lib-windows/fftw/: libfftw3-3.lib
SpeakerRecognizer/SpeakerModeler/: CMakeLists.txt
SpeakerRecognizer/SpeakerModeler/include/: Processor.h  model_io.h
SpeakerRecognizer/SpeakerModeler/src/: Processor.cpp  SpeakerModeler.cpp  main.cpp  model_io.cpp
SpeakerRecognizer/SpeakerRecognizer/: CMakeLists.txt
SpeakerRecognizer/SpeakerRecognizer/include/: Extractor.h  model_io.h
SpeakerRecognizer/SpeakerRecognizer/src/: Extractor.cpp  main.cpp  model_io.cpp
SpeakerRecognizer/Test/: CMakeLists.txt
SpeakerRecognizer/Test/src/: main.cpp
cpp/: Dockerfile
cpp/SpeakerRecognizer/: CMakeLists.txt
cpp/SpeakerRecognizer/FeatureExtractor/: CMakeLists.txt
cpp/SpeakerRecognizer/FeatureExtractor/include/: FeatureExtractor.h  MfccExtractor.h  SoundFile.h  inverse_mfcc.h  kaldi_io.h  mfcc.h  window.inl
cpp/SpeakerRecognizer/FeatureExtractor/src/: MfccExtractor.cpp  SoundFile.cpp  inverse_mfcc.cpp  kaldi_io.cpp  mfcc.cpp
cpp/SpeakerRecognizer/Lib-linux/arma-extend/: Mat_extra_bones.hpp  Mat_extra_meat.hpp
cpp/SpeakerRecognizer/Lib-linux/armadillo/include/armadillo_bits/: Mat_meat.hpp
cpp/SpeakerRecognizer/Lib-windows/armadillo/Debug/: armadillo.lib
cpp/SpeakerRecognizer/Lib-windows/armadillo/Release/: armadillo.lib
cpp/SpeakerRecognizer/Lib-windows/armadillo/include/armadillo_bits/: Mat_bones.hpp  gmm_diag_meat.hpp
cpp/SpeakerRecognizer/Lib-windows/libmpg123-1/: libmpg123-0.lib
cpp/SpeakerRecognizer/SpeakerModeler/: CMakeLists.txt
cpp/SpeakerRecognizer/SpeakerModeler/include/: SpeakerModeler.h  model_io.h
cpp/SpeakerRecognizer/SpeakerModeler/src/: SpeakerModeler.cpp  main.cpp  model_io.cpp
cpp/SpeakerRecognizer/SpeakerRecognizer/: CMakeLists.txt
cpp/SpeakerRecognizer/SpeakerRecognizer/include/: SpeakerRecognizer.h  model_io.h  socket.h
cpp/SpeakerRecognizer/SpeakerRecognizer/src/: SpeakerRecognizer.cpp  main.cpp  model_io.cpp
cpp/SpeakerRecognizer/Test/: CMakeLists.txt
cpp/SpeakerRecognizer/Test/src/: main.cpp
gradle/wrapper/: gradle-wrapper.properties
java/: Dockerfile
java/SpeakerRecognizer/: README.md  build.gradle  package.json  webpack.config.js
java/SpeakerRecognizer/src/main/java/speakerid/config/: SpringBootConfig.java  WebMvcConfig.java
java/SpeakerRecognizer/src/main/java/speakerid/controller/: HomeController.java
java/SpeakerRecognizer/src/main/java/speakerid/util/: Cleanup.java  RecordPreprocessor.java  ResourceLoader.java
java/SpeakerRecognizer/src/main/resources/: application.properties
java/SpeakerRecognizer/src/main/resources/static/: index.html  messages.json
java/SpeakerRecognizer/src/main/resources/static/css/: theme.css
java/SpeakerRecognizer/src/main/resources/static/js/: enroll.js  index.js  record.js  recorder.js  scope.js  translate.js  upload.js
java/SpeakerRecognizer/src/main/resources/static/texts/: be.json  en.json
java/SpeakerRecognizer/src/main/webapp/js/: index.js
kaldi/: link_kaldi_tools.sh  make_soft_links.sh  process.sh
kaldi/egs/wsj/s5/steps/: align_fmllr.sh
kaldi/src/featbin/: apply-cmvn  compute-cmvn-stats  compute-mfcc-feats  copy-feats  splice-feats  transform-feats
kaldi/src/gmmbin/: gmm-boost-silence  gmm-est-fmllr-gpost  gmm-post-to-gpost
kaldi/tools/config/: common_path.sh
kaldi/tools/openfst/lib/: libfst.so.8
src/main/java/speakerid/config/: SpringBootConfig.java
src/main/java/speakerid/controller/: HomeController.java
src/main/resources/: dictors.txt
src/main/webapp/: index.html
src/main/webapp/js/: index.js
